# Capture

./: Cargo.toml  build.cmd  build.rs  ffmpeg.ps1  rustfmt.toml  test.cmd
.github/workflows/: release.yml
nginx/: Dockerfile  docker-compose.yml  nginx.conf
src/: args.rs  audio.rs  encoder.rs  input.rs  keylog.rs  main.rs  overlay.rs  stream.rs  video.rs
src/audio/: audio_device.rs  audio_filter.rs  audio_format.rs  audio_input.rs  audio_mixer.rs  audio_resampler.rs  audio_stream.rs
src/video/: video_desktop.rs  video_encoder.rs  video_format.rs  video_input.rs  video_stream.rs
