[package]
name = "Capture"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = { version = "7.1.0", features = [] }
ffmpeg-sys-next = { version = "7.1.0", features = [
    "avcodec",
    "avdevice",
    "avfilter",
    "avformat",
    "swresample",
    "swscale",
] }
windows = { version = "0.61.3", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Security_Authorization_AppCapabilityAccess",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_WinRT_Direct3D11",
    "Win32_UI_Shell_PropertiesSystem",
] }
